# src/main/java/net/samitkumar/person_management/entity/Person.java
@@ -28,7 +28,7 @@ public class Person {
     Set<ContactInfo> contactInfo;
 
     @MappedCollection(idColumn = "person_id")
-    Set<SocialMedia> socialMedia;
+    Set<SocialMedia> socialMediaAccount;
 
     @ReadOnlyProperty
     LocalDateTime createdAt;
